--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.tutorialmod.cirnu": "Cirnu",
   "item.tutorialmod.cirnuception": "Cirnuception",
 
+  "block.tutorialmod.cirnu_block": "Block of Cirnu",
+
   "creativetab.stuff_tab": "Stuff"
 }
